--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript-eslint": "^8.23.0"
   },
   "dependencies": {
+    "@doko-js/wasm": "^1.0.0",
     "js-yaml": "^4.1.0",
     "uuid": "^11.0.5"
   }
