--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zk-pass-sdk",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
     "dist/**/*"
   ],
